--- a/app/src/main/res/layout/dialog_about.xml
+++ b/app/src/main/res/layout/dialog_about.xml
@@ -17,7 +17,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="@dimen/dialog_padding">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -31,7 +32,9 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/dialog_padding"
+            android:paddingRight="@dimen/dialog_padding">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -45,26 +48,20 @@
         </LinearLayout>
     </LinearLayout>
     <TextView
+        android:id="@+id/about_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:autoLink="all"
         android:text="@string/dialog_about_0"
-        android:textSize="14sp"
-        android:paddingLeft="@dimen/default_padding"
-        android:paddingRight="@dimen/default_padding"/>
+        android:textSize="14sp"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/dialog_about_1_title"
-        android:textSize="17sp"
-        android:paddingLeft="@dimen/default_padding"
-        android:paddingRight="@dimen/default_padding"/>
+        android:textSize="17sp"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:autoLink="all"
         android:text="@string/dialog_about_1_body"
-        android:textSize="14sp"
-        android:paddingLeft="@dimen/default_padding"
-        android:paddingRight="@dimen/default_padding"/>
+        android:textSize="14sp"/>
 </LinearLayout>
