--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-    Copyright (C) 2015 SpiritCroc
-    Email: spiritcroc@gmail.com
+    Copyright (C) 2019 SpiritCroc
+
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
@@ -15,30 +15,16 @@
 -->
 
 <resources>
-    <color name="green_default">#43a047</color>
-    <color name="green_dark">#388e3c</color>
-    <color name="green_light">#4caf50</color>
-    <color name="green_very_light">#a5d6a7</color>
 
-    <color name="list_item_long_click">#bdbdbd</color>
+    <color name="list_item_long_click">#ff616161</color>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat">
         <item name="colorPrimary">@color/green_default</item>
         <item name="colorPrimaryDark">@color/green_dark</item>
-        <item name="colorAccent">@color/green_dark</item>
+        <item name="colorAccent">@color/green_light</item>
     </style>
 
-    <!-- Theme for dialogs. -->
-    <style name="DialogTheme" parent="AppTheme">
-        <item name="android:textViewStyle">@style/DialogTextViewTheme</item>
-    </style>
-
-    <!-- Themes for single views. -->
-    <style name="DialogTextViewTheme" parent="android:TextAppearance.Widget.TextView">
-        <item name="android:padding">@dimen/dialog_padding</item>
-    </style>
-
-    <bool name="is_night">false</bool>
+    <bool name="is_night">true</bool>
 
 </resources>
