--- a/app/src/main/res/values/strings_activity_settings.xml
+++ b/app/src/main/res/values/strings_activity_settings.xml
@@ -80,6 +80,7 @@
     </string-array>
 
     <string name="pref_colors">Colors</string>
+    <string name="pref_colors_dark">Colors for night theme</string>
     <string name="pref_text_color">Text color</string>
     <string name="pref_text_color_unconfirmed">Unconfirmed text color</string>
     <string name="pref_units">Units</string>
